발표 시작 디자인 추가

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-:root {
+@font-face {
+  font-family: 'Cafe24-Ssurround';
+  src: url('/fonts/Cafe24Ssurround-v2.0.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +72,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
